Fixed the CSS for the whole page to make it look more aligned. also fixed the contactform on the contact page.

--- a/src/Assets/css/styles.css
+++ b/src/Assets/css/styles.css
@@ -66,9 +66,9 @@ body {
      background-color: var(--_clr-bkg1);
 } */
 .toppen {
+    margin: auto;
     padding-top: 1rem;
-    padding-left: 20%;
-    padding-right: 20%;
+    width: 1296px;
     gap:2rem;
     display: grid;
     grid-template-columns:auto 1fr auto auto;
@@ -190,8 +190,8 @@ input:checked + .slider:before {
 
 .bottom-of-page-1 {
     padding-top: 6rem;
-    padding-left: 20%;
-    padding-right: 20%;
+    width: 1296px;
+    margin: auto;
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-areas: "text phones";
@@ -203,7 +203,7 @@ input:checked + .slider:before {
     text-align: left;
 }
 .headline {
-    font-size: 2.4rem;
+    font-size: 3rem;
     font-weight: 900;
     text-align: left;
 }
@@ -212,7 +212,6 @@ input:checked + .slider:before {
     font-weight: 100;
 }
 .phones {
-    margin-right: 1rem;
     grid-area: phones;
 }
 .downloads {
@@ -259,8 +258,8 @@ input:checked + .slider:before {
 .logos {
     /* max-width: 1320px; */
     padding-top: 8rem;
-    margin-left: 20%;
-    margin-right: 20%;
+    width: 1296px;
+    margin: auto;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -286,16 +285,16 @@ input:checked + .slider:before {
 }
 .bottom-of-page-2 {
     padding-top: 8rem;
-    padding-left: 20%;
-    padding-right: 20%;
+    width: 1296px;
+    margin: auto;
     display: grid;
     grid-template-columns: 1fr 1fr;
 
 }
 .iphone-card {
     position: relative;
-    width: 267px;
-    height: 595px;
+    width: 348px;
+    height: 684px;
 }
 .iphone-card img {
     position: absolute;
@@ -381,8 +380,8 @@ input:checked + .slider:before {
 .page-four {
     padding-top: 5rem;
     padding-bottom: 5rem;
-    padding-left: 23%;
-    padding-right: 20%;
+    width: 1076px;
+    margin: auto;
     display: grid;
     justify-content: center;
     align-items: center;
@@ -515,8 +514,8 @@ input:checked + .slider:before {
 } */
 .page-six {
     padding-top: 5rem;
-    padding-right: 17%;
-    padding-left: 17%;
+    width: 1296px;
+    margin: auto;
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-areas: "left faqs"
@@ -724,13 +723,17 @@ input:checked + .slider:before {
     font-weight: 100;
     font-size: 12px;
 }
+
+/* CSS for the Contact Page */
+
 .contactPage {
-    max-width: 1920;
+    max-width: 1920px;
+    width: 1296px;
+    margin: auto;
     display: grid; 
     padding-top: 2rem;
     padding-bottom: 5rem;
-    padding-left: 20%;
-    padding-right: 20%;
+
     display: grid;
     align-items: center;
     grid-template-columns: 1fr 1fr;
@@ -748,6 +751,8 @@ input:checked + .slider:before {
     gap: 7px;
 }
 .navHeadline {
+    font-size: 2rem;
+    font-weight: 900;
     margin-bottom: 2rem;
 }
 .details-container {
@@ -799,9 +804,19 @@ input:checked + .slider:before {
     height: 718px;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    margin: auto;
     align-items: center;
     border-radius: 10px;
+}
+.conHeadline {
+    font-size: 1.2rem;
+    padding-top: 6rem;
+}
+.conInputs {
+    margin-top: 2rem;
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
 }
 .inputFullName {
     font-size: 1.2rem;
@@ -822,6 +837,7 @@ input:checked + .slider:before {
     border-radius: 10px;
 }
 .consult-btn {
+    margin-top: 10rem;
     color: white;
     background-color: var(--_clr-primary);
     border: none;
